feat(identity): identity endpoints

--- a/src/User.API/appsettings.json
+++ b/src/User.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=identity;Username=postgres;Password=mysecretpassword"
+  },
+  "Jwt": {
+    "Key": "SuaChaveSecretaMuitoLongaEComplexa",
+    "Issuer": "SeuEmissor",
+    "Audience": "SuaAudiencia"
   }
 }
