--- a/src/User.API/appsettings.Development.json
+++ b/src/User.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "RabbitMq": "amqp://user:password@localhost:5672"
   }
 }
